rearrange and add elements

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 
 </body>
   <h1> Wikipedia </h1>
-  <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" id="surpriseMe">
-    <h2><button class="btn btn-info btn-lg">Surprise Me</button></h2>
-  </a>
+  <img src="https://github.com/chrisjim316/freeCodeCamp-/blob/master/Assets/Images/Wikipedia%20Viewer/Images/2000px-Wikipedia-logo-v2-en1-640x538.png?raw=true" id="wikiLogo">
+  <div class="row">
+    <form>
+      <input id="search" type="search" placeholder="Search" required>
+      <h2 style="display:inline-block;"><a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" id="surpriseMe">Surprise Me</a></h2>
+    </form>
+  </div>
+
+  <div id="response-area"></div>
 
 <!-- The footer -->
 <footer>
