add search button

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <img src="https://github.com/chrisjim316/freeCodeCamp-/blob/master/Assets/Images/Wikipedia%20Viewer/Images/2000px-Wikipedia-logo-v2-en1-640x538.png?raw=true" id="wikiLogo">
   <div class="row">
     <form>
-      <input id="search" type="search" placeholder="Search" required>
+      <input id="search" type="search" placeholder="Search on wiki" required>
+      <h2 style="display:inline-block;" id="searchButton">Search</h2>
       <h2 style="display:inline-block;"><a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" id="surpriseMe">Surprise Me</a></h2>
     </form>
   </div>
+  <br>
+  <div id="response"></div>
 
-  <div id="response-area"></div>
 
 <!-- The footer -->
 <footer>
